objects/agf__ADM_Task__c.object
<CustomObject>
    <description>Created to import task data from SF</description>
    <fields>
        <fullName>agf__Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Due_By__c</fullName>
        <label>Due By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Hours_Remaining__c</fullName>
        <label>Hours Remaining</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Order__c</fullName>
        <description>The one-based order of this task within the specified work.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__SprintId__c</fullName>
        <description>The denormalized field used by streaming api to filter task updates.</description>
        <label>SprintId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Starting_Hours__c</fullName>
        <label>Starting Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on someone else</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Work__c</fullName>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>agf__Hours_Remaining__c</columns>
        <columns>agf__Work__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>agf__Assigned_To_is_not_null</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( agf__Assigned_To__c )</errorConditionFormula>
        <errorMessage>Assigned To cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Subject_is_not_null</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( agf__Subject__c )</errorConditionFormula>
        <errorMessage>Subject cannot be blank</errorMessage>
    </validationRules>
</CustomObject>